--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@npm//@bazel/concatjs:index.bzl", "karma_web_test", "karma_web_test_suite")
+
 package(default_visibility = ["//visibility:public"])
 
 exports_files([
