--- a/integration/bazel/src/hello-world/BUILD.bazel
+++ b/integration/bazel/src/hello-world/BUILD.bazel
@@ -1,8 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@npm//@bazel/karma:index.bzl", "karma_web_test_suite")
+load("@npm//@bazel/concatjs:index.bzl", "karma_web_test_suite")
 load("@npm//@bazel/typescript:index.bzl", "ts_library")
-load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
+load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
 load("@npm//@angular/bazel:index.bzl", "ng_package")
 load("//tools:ng_ts_library.bzl", "ng_ts_library")
 
