--- a/packages/bazel/src/ng_package/BUILD.bazel
+++ b/packages/bazel/src/ng_package/BUILD.bazel
@@ -26,6 +26,7 @@ nodejs_binary(
         # END-DEV-ONLY
         "//typescript",
     ],
+    templated_args = ["--bazel_patch_module_resolver"],
     entry_point = (
         # BEGIN-DEV-ONLY
         "@npm" +
@@ -46,7 +47,6 @@ load("@npm//@bazel/typescript:index.bzl", "ts_library")
 ts_library(
     name = "lib",
     srcs = glob(["*.ts"]),
-    node_modules = "@npm//typescript:typescript__typings",
     tsconfig = ":tsconfig.json",
     deps = [
         "@npm//@types/node",
@@ -69,6 +69,7 @@ nodejs_binary(
         "lib",
         "@npm//shelljs",
     ],
+    templated_args = ["--bazel_patch_module_resolver"],
     entry_point = ":packager.ts",
 )
 # END-DEV-ONLY
